funcionalidade implementada: 'listagem de compras por evento ou por usuario'
